[package]
name = "minimal_ansi_color"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Thomas-Mewily/ansi_color"
keywords = ["ansi", "color"]
categories = ["command-line-interface"]
description = "Ansi Color"
authors = ["Mewily"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]